Update social preview metadata

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="EcoTracker">
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="astana-waste-watch" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="EcoTracker" />
+    <meta property="og:description" content="EcoTracker — чистый город начинается с тебя" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/gwTgNUP2XKN3jtcja1ZuY2PHlUn1/social-images/social-1758524486284-Эмблема.jpg">
 
