Remove Lovable references and update metadata

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EcoTracker</title>
-    <meta name="description" content="EcoTracker">
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="EcoTracker — чистый город начинается с тебя">
+    <meta name="author" content="BLINK" />
 
     <meta property="og:title" content="EcoTracker" />
     <meta property="og:description" content="EcoTracker — чистый город начинается с тебя" />
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/gwTgNUP2XKN3jtcja1ZuY2PHlUn1/social-images/social-1758524486284-Эмблема.jpg">
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@EcoTrackerKZ" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/gwTgNUP2XKN3jtcja1ZuY2PHlUn1/social-images/social-1758524486284-Эмблема.jpg">
     <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/gwTgNUP2XKN3jtcja1ZuY2PHlUn1/uploads/1758524118977-icons8_recycle.ico">
 </head>
