Set EcoTracker as author

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EcoTracker</title>
     <meta name="description" content="EcoTracker — чистый город начинается с тебя">
-    <meta name="author" content="BLINK" />
+    <meta name="author" content="EcoTracker" />
 
     <meta property="og:title" content="EcoTracker" />
     <meta property="og:description" content="EcoTracker — чистый город начинается с тебя" />
